2009-02-20  Jonathan Pryor  <jpryor@novell.com>

	* map.h: Flush (adds Mono_Unix_UnixSignal_SignalInfo::pipecnt, removes
	  functions no longer declared within Mono.Posix.dll).
	* signal.c: Allow Mono_Unix_UnixSignal_WaitAny() to be called 
	  concurrently from multiple threads w/o blocking each thread;
	  previously, calls to Mono_Unix_UnixSignal_WaitAny() would block
	  until the previous call completed.  This required restructuring
	  Mono_Unix_UnixSignal_SignalInfo to hold a ref-counted
	  read_fd/write_fd pair (instead of allocating & releasing within
	  _WaitAny()) so that the pipes could be "shared" between threads.
	  Patch thanks to tim.jenks@realtimeworlds.com.

2009-02-10  Jeffrey Stedfast  <fejj@novell.com>

	* minizip/zip.c: Fix warnings about old-style paramater type
	specifications.

	* minizip/unzip.c Fix warnings about old-style paramater type
	specifications.
	(unzlocal_DosDateToTmuDate): Fix ambiguous else's.
	(unzlocal_DosDateToTmuDate): Here too.
	(unzlocal_CheckCurrentFileCoherencyHeader): And here.

	* old-map.c: Added prototypes to silence compile warnings. Looks
	like this file is supposed to be autogenerated, so probably not
	the right fix but I can't find the autogen script.

	* map.h (helper_Mono_Posix_getpwnamuid): Added a prototype for
	this - it doesn't seem to be used anywhere in mono, so
	maybe it can be removed but I'm not positive.
	(map_Mono_Posix_PollEvents): Added prototype.
	(map_Mono_Posix_Signals): Added prototype.

	* macros.c: #include "map.h" to silence compile warnings about no
	previous prototypes.

2009-02-09  Jeffrey Stedfast  <fejj@novell.com>

	* supportw.c (SetWindowPos): Fixed compile warnings about
	printf-style formatters.
	(SendMessageA): Same.

2009-01-14  Geoff Norton  <gnorton@novell.com>

	* supportw.c: Use unsigned int instead of uint, as its more portable.
	Fixes compilation issue on Mac OSX.

2009-01-08  Rodrigo Kumpera  <rkumpera@novell.com>
